bk_ida/gccida/c3/make_safe_from
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_safe_from/src/emit-rtl.c:3186:23: error: use of undeclared identifier 'machine_mode'
temp = gen_reg_rtx( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x)); 
                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_safe_from/src/emit-rtl.c:3186:38: error: expected expression
temp = gen_reg_rtx( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x)); 
                                     ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_safe_from/src/obj/emit-rtl.o] Error 1
